Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.11, 11.4, 11.8, 12.3, 13.0
-
Can result in hang or crash
-
Q3/2026 Server Maintenance
Description
--source include/have_innodb.inc
|
SET GLOBAL innodb_saved_page_number_debug=23; |
SET GLOBAL innodb_fil_make_page_dirty_debug=0; |
Leads to:
|
CS 12.3.2 4c371e30f003b601e7485533476208ae27d51937 (Debug, Clang 18.1.3-11) Build 10/05/2026 |
mariadbd: /test/12.3_dbg/storage/innobase/log/log0log.cc:1156: void log_write_up_to(lsn_t, bool, const completion_callback *): Assertion `lsn != 0' failed.
|
|
CS 12.3.2 4c371e30f003b601e7485533476208ae27d51937 (Debug, Clang 18.1.3-11) Build 10/05/2026 |
Core was generated by `/test/MD100526-mariadb-12.3.2-linux-x86_64-dbg/bin/mariadbd --no-defaults --max'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
 |
[Current thread is 1 (LWP 3483507)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x0000714cdbe4527e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x0000714cdbe288ff in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x0000714cdbe2881b in __assert_fail_base (fmt=0x714cdbfd01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x6050f91c0922 "lsn != 0", file=file@entry=0x6050f91c9769 "/test/12.3_dbg/storage/innobase/log/log0log.cc", line=line@entry=1156, function=function@entry=0x6050f91c9d87 "void log_write_up_to(lsn_t, bool, const completion_callback *)") at ./assert/assert.c:96
|
#6 0x0000714cdbe3b517 in __assert_fail (assertion=0x6050f91c0922 "lsn != 0", file=0x6050f91c9769 "/test/12.3_dbg/storage/innobase/log/log0log.cc", line=1156, function=0x6050f91c9d87 "void log_write_up_to(lsn_t, bool, const completion_callback *)") at ./assert/assert.c:105
|
#7 0x00006050f88975de in log_write_up_to (lsn=0, durable=true, callback=0x0)at /test/12.3_dbg/storage/innobase/log/log0log.cc:1156
|
#8 0x00006050f87dfc37 in innodb_make_page_dirty (save=0x694bc401a450)at /test/12.3_dbg/storage/innobase/handler/ha_innodb.cc:17874
|
#9 0x00006050f7f61b00 in sys_var_pluginvar::global_update (this=0x60511c698220, thd=0x694bc4000d60, var=0x694bc401a430)at /test/12.3_dbg/sql/sql_plugin.cc:3704
|
#10 0x00006050f7dc8aba in sys_var::update (this=0x60511c698220, thd=0x694bc4000d60, var=0x694bc401a430)at /test/12.3_dbg/sql/set_var.cc:211
|
#11 0x00006050f7dcade4 in set_var::update (this=0x694bc401a430, thd=0x694bc4000d60) at /test/12.3_dbg/sql/set_var.cc:869
|
#12 0x00006050f7dca928 in sql_set_variables (thd=0x694bc4000d60, var_list=0x694bc4006290, free=true) at /test/12.3_dbg/sql/set_var.cc:750
|
#13 0x00006050f7f2d6a8 in mysql_execute_command (thd=0x694bc4000d60, is_called_from_prepared_stmt=false) at /test/12.3_dbg/sql/sql_parse.cc:4925
|
#14 0x00006050f7f21184 in mysql_parse (thd=0x694bc4000d60, rawbuf=0x694bc401a250 "SET GLOBAL innodb_fil_make_page_dirty_debug=0", length=45, parser_state=0x714cb45df9f0)at /test/12.3_dbg/sql/sql_parse.cc:7949
|
#15 0x00006050f7f1e4cd in dispatch_command (command=COM_QUERY, thd=0x694bc4000d60, packet=0x694bc400b5e1 "SET GLOBAL innodb_fil_make_page_dirty_debug=0", packet_length=45, blocking=true) at /test/12.3_dbg/sql/sql_parse.cc:1903
|
#16 0x00006050f7f21d33 in do_command (thd=0x694bc4000d60, blocking=true)at /test/12.3_dbg/sql/sql_parse.cc:1437
|
#17 0x00006050f811e309 in do_handle_one_connection (connect=0x60511cace5d0, put_in_cache=true) at /test/12.3_dbg/sql/sql_connect.cc:1503
|
#18 0x00006050f811e0ae in handle_one_connection (arg=0x60511ca3e8b0)at /test/12.3_dbg/sql/sql_connect.cc:1415
|
#19 0x0000714cdbe9caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#20 0x0000714cdbf29c6c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
|
Bug Detection Matrix |
Rel o/d Build Commit UniqueID observed
|
CS 10.6 dbg 100526 d37e50c6d04c7c27362f1668ae86fa592b94fb23 No bug found
|
CS 10.6 opt 100526 d37e50c6d04c7c27362f1668ae86fa592b94fb23 No bug found
|
CS 10.11 dbg 100526 8721a00dd38dc0aa1514a3b5ca8c95c6e94af1c9 lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
CS 10.11 opt 100526 8721a00dd38dc0aa1514a3b5ca8c95c6e94af1c9 No bug found
|
CS 11.4 dbg 100526 f279551013d1319f27344080e2c0758f3959cebf lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
CS 11.4 opt 100526 f279551013d1319f27344080e2c0758f3959cebf No bug found
|
CS 11.8 dbg 100526 04e09010773caf0b302b2933fff3fe95381a5e13 lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
CS 11.8 opt 100526 04e09010773caf0b302b2933fff3fe95381a5e13 No bug found
|
CS 12.3 dbg 100526 4c371e30f003b601e7485533476208ae27d51937 lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
CS 12.3 dbg 110526 c0849d98f7ca2627ea90283b125b5b86f75b173a lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
CS 12.3 opt 100526 4c371e30f003b601e7485533476208ae27d51937 No bug found
|
CS 12.3 opt 110526 c0849d98f7ca2627ea90283b125b5b86f75b173a No bug found
|
CS 13.0 dbg 100526 96b3dd0c34427e9338dda1375575a0e05a7cd267 lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
CS 13.0 opt 100526 96b3dd0c34427e9338dda1375575a0e05a7cd267 No bug found
|
ES 10.6 dbg 100526 55cfada6c54d1b08f2372adc1369a5e5e76f472d No bug found
|
ES 10.6 opt 100526 55cfada6c54d1b08f2372adc1369a5e5e76f472d No bug found
|
ES 11.4 dbg 100526 90f707057d44f1b5c013a0c3672fd12f32ea7085 lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
ES 11.4 opt 100526 90f707057d44f1b5c013a0c3672fd12f32ea7085 No bug found
|
ES 11.8 dbg 100526 d4fbd664a4514441bb3d9042c0089842ee6fc3c8 lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
ES 11.8 opt 100526 d4fbd664a4514441bb3d9042c0089842ee6fc3c8 No bug found
|
ES 12.3 dbg 100526 4063148254974421994024b7cc94f6f2a850177d lsn != 0|SIGABRT|log_write_up_to|innodb_make_page_dirty|sys_var_pluginvar::global_update|sys_var::update
|
ES 12.3 opt 100526 4063148254974421994024b7cc94f6f2a850177d No bug found
|